--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "gd-2.0.35.tar.bz2": ccf34a610abff2dbf133a20c4d2a4aa94939018a
+  libgd-2.1.0.tar.xz: 66c56fc07246b66ba649c83e996fd2085ea2f9e2
