--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
+  gd-2.2.5.tar.gz: 6c5037dbf5bab3d592da848b2468acef09d9be46
   libgd-2.1.0.tar.xz: 66c56fc07246b66ba649c83e996fd2085ea2f9e2
