--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
-  libgd-2.3.2.tar.xz: dddf5e9d25cb0b20b8642d5cbcfad67f8903532f
+  "libgd-2.3.3.tar.xz": 7ce6ecb5aed26c08246a37b6351c886ab4b51ca2
+
